--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@tailwindcss/forms": "^0.5.3",
     "next": "13.4.3",
+    "prisma": "^4.14.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
