--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^4.14.1",
     "@tailwindcss/forms": "^0.5.3",
     "next": "13.4.3",
     "prisma": "^4.14.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-hook-form": "^7.44.2"
   },
   "devDependencies": {
     "@types/node": "20.2.3",
