--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
   "dependencies": {
     "@prisma/client": "^4.14.1",
     "@tailwindcss/forms": "^0.5.3",
+    "emailjs-com": "^3.2.0",
+    "iron-session": "^6.3.1",
     "next": "13.4.3",
     "prisma": "^4.14.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-hook-form": "^7.44.2"
+    "react-hook-form": "^7.44.2",
+    "swr": "^2.1.5",
+    "twilio": "^4.11.1"
   },
   "devDependencies": {
     "@types/node": "20.2.3",
