--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@prisma/client": "^4.16.1",
     "@tailwindcss/forms": "^0.5.3",
+    "@vercel/analytics": "^1.0.1",
     "emailjs-com": "^3.2.0",
     "gray-matter": "^4.0.3",
     "iron-session": "^6.3.1",
